<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.dataset_editing.MetadataEditingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataCreationActivity_DataCreationTitle"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/categories_editing_guideline1"
        app:layout_constraintStart_toStartOf="@id/categories_editing_guideline3"
        app:layout_constraintTop_toTopOf="@id/categories_editing_guideline5" />

    <EditText
        android:id="@+id/dataset_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:autofillHints="Enter dataset name"
        android:hint="@string/dataset_name"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/categories_editing_guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toTopOf="@id/categories_editing_guideline2"
        app:layout_constraintTop_toBottomOf="@id/categories_editing_guideline1"
        app:layout_constraintStart_toStartOf="@id/categories_editing_guideline3"
        app:layout_constraintEnd_toStartOf="@id/categories_editing_guideline4">

        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataCreationActivity_DataCreationAddButton"
        android:textSize="23sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_editing_guideline2"
        app:layout_constraintBottom_toTopOf="@id/button_submit_list"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataCreationActivity_DataCreationSubmitButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/categories_editing_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/categories_editing_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/categories_editing_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/categories_editing_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/categories_editing_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>

