<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/learningDatasetSelectionFragment"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/BottomNav_gotoLearningButton"
        app:actionViewClass="android.widget.Button" />
    <item
        android:id="@+id/datasetsOverviewFragment"
        android:icon="@drawable/ic_baseline_photo_24"
        android:title="@string/BottomNav_gotoDatasetEditingButton"
        app:actionViewClass="android.widget.Button"/>
</menu>

