<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editText_data_creation_category_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/MetadataEditing_DataCreationCategoryHintText"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Category's name" />

    <ImageButton
        android:id="@+id/button_remove"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:background="#BF1D1D"
        android:clickable="false"
        android:contentDescription="@string/DatasetList_deleteCategoryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_data_creation_category_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>

