<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.learning.LearningSettingsFragment">

    <TextView
        android:id="@+id/textView_learning_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LearningSettings_tvLearningModeText"
        android:textColor="#3F51B5"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/learning_settings_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning_settings_guideline1" />


    <Button
        android:id="@+id/button_choose_presentation"
        android:layout_width="@dimen/LearningSettings_btn_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/LearningSettings_btn_textSize"
        android:text="@string/LearningSettings_presentationButton"
        app:layout_constraintBottom_toTopOf="@id/learning_settings_guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning_settings_guideline2" />

    <Button
        android:id="@+id/button_choose_representation"
        android:layout_width="@dimen/LearningSettings_btn_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/LearningSettings_btn_textSize"
        android:text="@string/LearningSettings_representationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning_settings_guideline3"
        app:layout_constraintBottom_toTopOf="@id/learning_settings_guideline4" />


    <Button
        android:id="@+id/button_choose_evaluation"
        android:layout_width="@dimen/LearningSettings_btn_width"
        android:layout_height="wrap_content"
        android:text="@string/LearningSettings_evaluationButton"
        android:textSize="@dimen/LearningSettings_btn_textSize"
        app:layout_constraintBottom_toTopOf="@id/learning_settings_guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning_settings_guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/learning_settings_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/learning_settings_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/learning_settings_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/learning_settings_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/learning_settings_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

</androidx.constraintlayout.widget.ConstraintLayout>