<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/learning_settings_menu_info"
        android:title="@string/LearningSettings_info"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="always" />
</menu>